k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-api
spec:
  selector:
    app: ecommerce-api
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
